<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    tools:context="com.example.android.snookerscorekepperapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerA_name"
                style="@style/TextStylePlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/textPlayerA" />

            <TextView
                android:id="@+id/playerA_score"
                style="@style/ScoreTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/textPlayerAScore" />

            <Button
                android:id="@+id/player_A_red_ball_button"
                style="@style/ButtonStyle"
                android:tag="@string/one"
                android:text="@string/text_red_ball_button"
                android:textColor="@color/colorTextRedButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerA"
                android:tag="@string/yellow_ball"
                android:text="@string/textYellowdBallButton"
                android:textColor="@color/colorTextYellowButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerA"
                android:tag="@string/three"
                android:text="@string/textGreenBallButton"
                android:textColor="@color/colorTextGreenButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerA"
                android:tag="@string/four"
                android:text="@string/textBrownBallButton"
                android:textColor="@color/colorTextBrownButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerA"
                android:tag="@string/five"
                android:text="@string/textBlueBallButton"
                android:textColor="@color/colorTextBlueButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerA"
                android:tag="@string/six"
                android:text="@string/textPinkBallButton"
                android:textColor="@color/colorTextPinkButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerA"
                android:tag="@string/seven"
                android:text="@string/textBlackBallButton"
                android:textColor="@color/colorTextBlackButton" />
        </LinearLayout>

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PlayerB_Name"
                style="@style/TextStylePlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/textPlayerB" />

            <TextView
                android:id="@+id/playerB_score"
                style="@style/ScoreTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/textPlayerAScore" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerB"
                android:tag="@string/one"
                android:text="@string/text_red_ball_button"
                android:textColor="@color/colorTextRedButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerB"
                android:tag="@string/yellow_ball"
                android:text="@string/textYellowdBallButton"
                android:textColor="@color/colorTextYellowButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerB"
                android:tag="@string/three"
                android:text="@string/textGreenBallButton"
                android:textColor="@color/colorTextGreenButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerB"
                android:tag="@string/four"
                android:text="@string/textBrownBallButton"
                android:textColor="@color/colorTextBrownButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerB"
                android:tag="@string/five"
                android:text="@string/textBlueBallButton"
                android:textColor="@color/colorTextBlueButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerB"
                android:tag="@string/six"
                android:text="@string/textPinkBallButton"
                android:textColor="@color/colorTextPinkButton" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="addForPlayerB"
                android:tag="@string/seven"
                android:text="@string/textBlackBallButton"
                android:textColor="@color/colorTextBlackButton" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_score_button"
        style="@style/ResetButtonStyle"
        android:text="@string/textResetScoreButton" />

</RelativeLayout>
